ajout du footer

--- a/contact.html
+++ b/contact.html
@@ -19,16 +19,14 @@
 </head>
 
 <body>
-
-    <header>
-        <section>
+    <section class="banniere-haut">
+        <header>
             <div class="logo">
                 <img src="logo-laplateforme-2024.png" alt="">
             </div>
- 
-        </section>
-    </header>
-    <main class="container-principal">
+        </header>
+    <main>
+        <div class="container-principal">
 
         <div class="container-principal">
             <div class="contain-flex">
@@ -60,10 +58,10 @@
                                 <input type="text" name="email" placeholder="exemple@email.com" size="30">
                                 <input type="tel" name="telephone" placeholder="00 12 34 56 78" size="30">
                         </section>
-                        <div class="container-principal">     
+                        <div class="contain-box">     
                             <section class="contain-flex">
                                         <select name="motif">
-                                        <option value="">Sélectionnez votre motif de contact</option>
+                                        <option value="">Sélectionnez un motif</option>
                                         <option value="aide">Aide à l'orientation</option>
                                         <option value="entreprise">Relation entreprises</option>
                                         <option value="presse">Presse, partenariat, communication</option>
@@ -82,16 +80,18 @@
                             <section class="contain-flex"> 
                                 <button type="submit">Envoyer</button>
                             </section>
+                    
                         </div>
-                        </fieldset>
+                    
+                    </fieldset>
                     </form>
                 </div>
             </div>
 
-
+            </div>
     </main>
 
-            <div class="question">
+            <div class="question contain-box">
                 <h2>Une autre question ?</h2>
                         <p>Nous sommes aussi joignable par :</p>
                         <p>– Email :&nbsp;<a href="mailto:contact@laplateforme.io" target="_blank"
@@ -111,9 +111,46 @@
                                 aria-hidden="true">Suivre sur Instagram</span></a>
                 </div>
             </div>
-        <footer>                   
-            <div class="container-contact">
-                <button type="button" ><a href="contact.html">Contact</a></button>
+        <footer>
+                <div class="liste-liens">
+                    <h3>La Plateforme</h3><br>
+                    <a href="page-accueil.html">Accueil</a><br>
+
+                    <a>Qui sommes-nous ?</a><br>
+
+                    <a>Notre brochure</a><br>
+
+                    <a >Ils parlent de nous</a><br>
+
+                    <a>News</a><br>
+                    <a>Taxe d'apprentissage</a><br>
+
+                </div>
+                <div class="liste-liens">
+                    <h3>Les Formations</h3><br>
+
+                    <a >Bachelor IT</a><br>
+
+                    <a >Master of Science</a><br>
+
+                    <a >Innovation Lab</a><br>
+
+                    <a >Développement</a><br>
+
+                    <a >Intelligence Artificielle</a><br>
+
+                    <a >Cybersécurité</a><br>
+                    </div>
+                 <div class="liste-liens droite">
+                    <p>Informations</p>
+
+                    <p>8 rue d’hozier, 13002 Marseille</p>
+
+                    <p>Tel : 04.84.89.43.69</p>
+
+                    <div class="container-contact">
+                        <a href="contact.html">Contact</a>
+                    </div>
                 </div>
         </footer>
 </body>
