--- a/page-accueil.html
+++ b/page-accueil.html
@@ -16,7 +16,7 @@
             </div>
         </header>
     </section>
-
+    <main>
     <section class="pres">
         <div class="textelink">
             <div class="entete">
@@ -51,22 +51,54 @@
         <div class="imagepres">
             <img src="picplateforme.jpg" alt="">
         </div>
-
+</main>
     </section>
-    <section class="basdepage">
-        <div class="reseau">
-            <img id="logobas" src="Fichier-1.svg" alt="">
-        </div>
-        <div class="plateforme">
+             <footer>
+                <div id="gauche" class="liste-liens">
+                    <img src="Fichier-1.svg" alt="La plateforme"><br><br>
 
-        </div>
-        <div class="formations">
+                    <a id="rejoindre" class="container-contact">Rejoingnez nos équipes</a>
+                    <a id="telecharger" class="container-contact">Télécharger la brochure</a>
+                </div>
+                <div class="liste-liens">
+                    <h3>La Plateforme</h3><br>
+                    <a href="page-accueil.html">Accueil</a><br>
 
-        </div>
-        <div class="informations">
+                    <a>Qui sommes-nous ?</a><br>
 
-        </div>
-    </section>
+                    <a>Notre brochure</a><br>
+
+                    <a >Ils parlent de nous</a><br>
+
+                    <a>News</a><br>
+                    <a>Taxe d'apprentissage</a><br>
+
+                </div>
+                <div class="liste-liens">
+                    <h3>Les Formations</h3><br>
+
+                    <a >Bachelor IT</a><br>
+
+                    <a >Master of Science</a><br>
+
+                    <a >Innovation Lab</a><br>
+
+                    <a >Développement</a><br>
+
+                    <a >Intelligence Artificielle</a><br>
+
+                    <a >Cybersécurité</a><br>
+                    </div>
+                 <div class="liste-liens">
+                    <p>Informations</p>
+
+                    <p>8 rue d’hozier, 13002 Marseille</p>
+
+                    <p>Tel : 04.84.89.43.69</p><br>
+
+                    <a class="container-contact" id="contact" href="contact.html">Contact</a>
+                </div>
+        </footer>
 </body>
 
 </html>
