modif du footer

--- a/page-accueil.html
+++ b/page-accueil.html
@@ -90,9 +90,9 @@
                     <a >Cybersécurité</a><br>
                     </div>
                  <div class="liste-liens">
-                    <p>Informations</p>
+                    <h3>Informations</h3><br>
 
-                    <p>8 rue d’hozier, 13002 Marseille</p>
+                    <p>8 rue d’hozier, 13002 Marseille</p><br>
 
                     <p>Tel : 04.84.89.43.69</p><br>
 
