--- a/page-accueil.html
+++ b/page-accueil.html
@@ -96,7 +96,7 @@
 
                     <p>Tel : 04.84.89.43.69</p><br>
 
-                    <a class="container-contact" id="contact" href="contact.html">Contact</a>
+                    <a class="container-contact" href="contact.html">Contact</a>
                 </div>
         </footer>
 </body>
