ajout media queries

--- a/page-accueil.html
+++ b/page-accueil.html
@@ -51,14 +51,14 @@
         <div class="imagepres">
             <img src="picplateforme.jpg" alt="">
         </div>
+        </section>
 </main>
     </section>
              <footer>
-                <div id="gauche" class="liste-liens">
-                    <img src="Fichier-1.svg" alt="La plateforme"><br><br>
-
-                    <a id="rejoindre" class="container-contact">Rejoingnez nos équipes</a>
-                    <a id="telecharger" class="container-contact">Télécharger la brochure</a>
+                <div class="logo liste-liens">
+                    <img src="Fichier-1.svg" alt="La plateforme"><br>
+                    <a id="rejoindre" class="bouton">Rejoingnez nos équipes</a>
+                    <a id="telecharger" class="bouton">Télécharger la brochure</a>
                 </div>
                 <div class="liste-liens">
                     <h3>La Plateforme</h3><br>
@@ -96,9 +96,11 @@
 
                     <p>Tel : 04.84.89.43.69</p><br>
 
-                    <a class="container-contact" href="contact.html">Contact</a>
-                </div>
+                    <a class="bouton" href="contact.html">Contact</a>
+                 </div>  
+
         </footer>
+
 </body>
 
 </html>
